--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <script>
     function redirect(role) {
       if (role === 'admin') {
-        window.location.href = 'admin.html';
+        window.location.href = 'ADlogin.html';
       } else if (role === 'user') {
         window.location.href = 'login.html';
       }
@@ -48,3 +48,4 @@
   </script>
 </body>
 </html>
+
