--- a/ADlogin.html
+++ b/ADlogin.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>Admin Login</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <style>
     body { font-family: Arial, sans-serif; padding: 20px; max-width: 400px; margin: auto; }
     input, button { width: 100%; padding: 10px; margin: 10px 0; }
@@ -22,6 +21,7 @@
   <div id="message"></div>
   <div id="error"></div>
 
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 <script>
   // Use the same Supabase credentials as register.html
     const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
@@ -100,3 +100,4 @@
 
 </body>
 </html>
+
