--- a/ADlogin.html
+++ b/ADlogin.html
@@ -60,8 +60,12 @@
       return;
     }
 
-    // Send magic link for login to the actual email
-    const { error: signInError } = await supabase.auth.signInWithOtp({ email: actualEmail });
+    const { error: signInError } = await supabase.auth.signInWithOtp({
+  email: actualEmail,
+  options: {
+    emailRedirectTo: 'https://ree0417.github.io/Human_Computer_Interaction/admin.html'
+ // ← change this to your actual hosted login page
+  }
 
     if (signInError) {
       errorEl.textContent = 'Failed to send login link: ' + signInError.message;
@@ -100,4 +104,5 @@
 
 </body>
 </html>
+
 
