--- a/ADlogin.html
+++ b/ADlogin.html
@@ -10,45 +10,50 @@
     button:hover { background: #606568; }
     #message { margin-top: 15px; color: green; }
     #error { margin-top: 15px; color: red; }
+    #loading { margin-top: 15px; color: blue; display: none; }
   </style>
 </head>
 <body>
 
   <h1>Admin Login</h1>
   <input type="email" id="email" placeholder="Enter your admin email" required />
-<button onclick="sendMagicLink()">Get Login Link</button>
+  <button onclick="sendMagicLink()">Get Login Link</button>
 
+  <div id="loading">Processing...</div>
   <div id="message"></div>
   <div id="error"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
 <script>
-  // Supabase credentials
+  // Use the same Supabase credentials as register.html
     const supabaseUrl = 'https://mqvjbgnipsjygmpwidnq.supabase.co';
     const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1xdmpiZ25pcHNqeWdtcHdpZG5xIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTIxNDkyNzQsImV4cCI6MjA2NzcyNTI3NH0.p-mZxDCirt9NY_3taGk7_mL-qK5zTR05jInt6FEWs4Y';
     const supabase = window.supabase.createClient(supabaseUrl, supabaseKey);
 
   async function sendMagicLink() {
-    let inputEmail = document.getElementById('email').value.trim().toLowerCase();
+    const inputEmail = document.getElementById('email').value.trim().toLowerCase();
     const messageEl = document.getElementById('message');
     const errorEl = document.getElementById('error');
+    const loadingEl = document.getElementById('loading');
+    
     messageEl.textContent = '';
     errorEl.textContent = '';
+    loadingEl.style.display = 'block'; // Show loading
 
     if (!inputEmail.startsWith('admin')) {
       errorEl.textContent = "Invalid email format. Please enter a valid email.";
+      loadingEl.style.display = 'none';
       return;
     }
- 
-    // Remove the 'admin' prefix to get the real email
+
     const actualEmail = inputEmail.slice(5);
 
     if (!actualEmail) {
       errorEl.textContent = "Invalid email format. Please enter a valid email.";
+      loadingEl.style.display = 'none';
       return;
     }
 
-    // Check if actualEmail is in admin whitelist
     const { data, error } = await supabase
       .from('AdminEmails')
       .select('email')
@@ -57,15 +62,18 @@
 
     if (error || !data) {
       errorEl.textContent = 'Email is not authorized for admin access.';
+      loadingEl.style.display = 'none';
       return;
     }
 
-   const { error: signInError } = await supabase.auth.signInWithOtp({
-  email: actualEmail,
-  options: {
-    emailRedirectTo: 'https://ree0417.github.io/Human_Computer_Interaction/admin.html' // ← change this to your actual hosted login page
-  }
-});
+    const { error: signInError } = await supabase.auth.signInWithOtp({
+      email: actualEmail,
+      options: {
+        emailRedirectTo: 'https://ree0417.github.io/Human_Computer_Interaction/admin.html'
+      }
+    });
+
+    loadingEl.style.display = 'none'; // Hide loading
 
     if (signInError) {
       errorEl.textContent = 'Failed to send login link: ' + signInError.message;
@@ -73,16 +81,15 @@
     }
 
     messageEl.textContent = 'Check your email for the login link!';
+    document.getElementById('email').value = ''; // Optionally clear input
   }
 
-  // After login, Supabase redirects back here with session in URL
   window.onload = async () => {
     const { data: { session } } = await supabase.auth.getSession();
 
     if (session) {
       const userEmail = session.user.email.toLowerCase();
 
-      // Check user email against whitelist (without any prefix here)
       const { data, error } = await supabase
         .from('AdminEmails')
         .select('email')
@@ -96,20 +103,8 @@
         return;
       }
 
-      // Redirect to admin dashboard
       window.location.href = 'admin.html';
     }
-
-    function sendMagicLink() {
-    const emailInput = document.getElementById('email');
-    const email = emailInput.value;
-
-    // Your logic to send the magic link goes here
-    console.log("Sending magic link to:", email);
-
-    // ✅ Reset the input field
-    emailInput.value = '';
-  }
   };
 </script>
 
