--- a/index.html
+++ b/index.html
@@ -1,51 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Select Login Role</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background-color: #f4f4f4;
-    }
+<h1>🚧 Website Under Construction 🚧<br>
+Our technician is currently working behind the scenes to bring everything online.<br>
+We’re making improvements and will be back shortly!<br><br>
 
-    h1 {
-      margin-bottom: 30px;
-    }
-
-    .role-button {
-      padding: 15px 30px;
-      font-size: 16px;
-      margin: 10px;
-      cursor: pointer;
-      background-color: #28292a;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-
-    .role-button:hover {
-      background-color: #7e868d;
-    }
-  </style>
-</head>
-<body>
-  <h1>Choose Your Login Role</h1>
-  <button class="role-button" onclick="redirect('user')">Login as User</button>
-  <button class="role-button" onclick="redirect('admin')">Login as Admin</button>
-
-  <script>
-    function redirect(role) {
-      if (role === 'admin') {
-        window.location.href = 'ADlogin.html';
-      } else if (role === 'user') {
-        window.location.href = 'login.html';
-      }
-    }
-  </script>
-</body>
-</html>
-
+Thank you for your patience and understanding.<br>
+— Rendzo Ntsanwisi The developer</h1>
