--- a/index.html
+++ b/index.html
@@ -1,6 +1,64 @@
-<h1>🚧 Website Under Construction 🚧<br>
-Our technician is currently working behind the scenes to bring everything online.<br>
-We’re making improvements and will be back shortly!<br><br>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Website Under Construction</title>
+  <style>
+    body {
+      background-color: #f4f4f4;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
 
-Thank you for your patience and understanding.<br>
-— Rendzo Ntsanwisi The developer</h1>
+    .container {
+      text-align: center;
+      background-color: white;
+      padding: 40px 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+      max-width: 500px;
+    }
+
+    h1 {
+      font-size: 28px;
+      color: #e67e22;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      color: #333;
+      line-height: 1.6;
+    }
+
+    .signature {
+      margin-top: 25px;
+      font-weight: bold;
+      color: #2c3e50;
+    }
+
+    .emoji {
+      font-size: 20px;
+      vertical-align: middle;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>🚧 Website Under Construction 🚧</h1>
+    <p>
+      Our technician is currently working behind the scenes to bring everything online.<br>
+      We’re making improvements and will be back shortly!
+    </p>
+    <p class="signature">
+      Thank you for your patience and understanding.<br>
+      — Rendzo Ntsanwisi <span class="emoji">👨‍💻</span>
+    </p>
+  </div>
+</body>
+</html>
