--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>🚧 Website Under Construction 🚧</h1>
+    <h1>🚧Oops! Website Under Construction 🚧</h1>
     <p>
       Our technician is currently working behind the scenes to bring everything online.<br>
       We’re making improvements and will be back shortly!
@@ -62,3 +62,4 @@
   </div>
 </body>
 </html>
+
