--- a/ADlogin.html
+++ b/ADlogin.html
@@ -13,7 +13,7 @@
     
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #f5f5f5 0%, #e8e8e8 100%);
+      background: linear-gradient(135deg, #747474 0%, #080808 100%);
       margin: 0;
       padding: 2rem;
       display: flex;
