--- a/basketball.html
+++ b/basketball.html
@@ -525,7 +525,7 @@
   <header class="header">
     <div class="container header-content">
       <div class="nav-brand">
-        <a href="basketball.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
@@ -763,3 +763,4 @@
   </script>
 </body>
 </html>
+
