--- a/contact.html
+++ b/contact.html
@@ -563,7 +563,7 @@
   <nav class="navbar">
     <div class="nav-brand">
       <a href="home.html">
-        <a href="contact.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
       </a>
       <div class="brand-text">Sports Hub</div>
       <button class="hamburger" id="hamburger">
@@ -906,4 +906,5 @@
   </script>
 </body>
 </html>
+
 
