--- a/football.html
+++ b/football.html
@@ -444,7 +444,7 @@
   <header class="header">
     <div class="container header-content">
       <div class="nav-brand">
-        <a href="football.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
@@ -802,3 +802,4 @@
   </script>
 </body>
 </html>
+
