--- a/netball.html
+++ b/netball.html
@@ -506,7 +506,7 @@
  <header class="header">
     <div class="container header-content">
       <div class="nav-brand">
-        <a href="netball.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
@@ -816,3 +816,4 @@
   </script>
 </body>
 </html>
+
