--- a/rugby.html
+++ b/rugby.html
@@ -445,7 +445,7 @@
   <header class="header">
     <div class="container header-content">
       <div class="nav-brand">
-        <a href="rugby.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
@@ -809,3 +809,4 @@
   </script>
 </body>
 </html>
+
