--- a/volleyball.html
+++ b/volleyball.html
@@ -518,7 +518,7 @@
  <header class="header">
     <div class="container header-content">
       <div class="nav-brand">
-        <a href="volleyball.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
+        <a href="home.html"><img src="Images/images.jpeg" alt="WSU Logo" class="logo-img"></a>
         <div class="brand-text">Sports Hub</div>
       </div>
       <div>
@@ -832,3 +832,4 @@
   </script>
 </body>
 </html>
+
