--- a/rugby.html
+++ b/rugby.html
@@ -526,8 +526,18 @@
           </div>
           
           <div class="form-group">
-            <label for="faculty"><i class="fas fa-building"></i> Faculty / Department</label>
-            <input type="text" id="faculty" name="faculty" class="form-control" placeholder="Faculty of Science">
+            <label for="faculty">
+              <i class="fas fa-building"></i> Faculty / Department
+            </label>
+            <select id="faculty" name="faculty" class="form-control">
+              <option>Faculty of Engineering, Built Environment and Information Technology</option>
+              <option>Faculty of Medicine and Health Sciences</option>
+              <option>Faculty of Management and Public Administration Sciences</option>
+              <option>Faculty of Economic and Financial Sciences</option>
+              <option>Faculty of Law, Humanities and Social Sciences</option>
+              <option>Faculty of Natural Sciences</option>
+              <option>Faculty of Education</option>
+            </select>
           </div>
         </div>
         
@@ -809,4 +819,5 @@
   </script>
 </body>
 </html>
+
 
