--- a/basketball.html
+++ b/basketball.html
@@ -583,8 +583,20 @@
       <option>Postgraduate</option>
     </select>
 
-    <label for="faculty">Faculty / Department</label>
-    <input type="text" id="faculty" name="faculty" placeholder="e.g. Faculty of Science">
+    <div class="form-group">
+            <label for="faculty">
+              <i class="fas fa-building"></i> Faculty / Department
+            </label>
+            <select id="faculty" name="faculty" class="form-control">
+              <option>Faculty of Engineering, Built Environment and Information Technology</option>
+              <option>Faculty of Medicine and Health Sciences</option>
+              <option>Faculty of Management and Public Administration Sciences</option>
+              <option>Faculty of Economic and Financial Sciences</option>
+              <option>Faculty of Law, Humanities and Social Sciences</option>
+              <option>Faculty of Natural Sciences</option>
+              <option>Faculty of Education</option>
+            </select>
+          </div>
 
     <label>Have you played basketball before? <span class="required">*</span></label>
     <div class="checkbox-group">
@@ -763,4 +775,5 @@
   </script>
 </body>
 </html>
+
 
