--- a/register.html
+++ b/register.html
@@ -320,7 +320,7 @@
 
             <div class="input-group">
               <label for="contact_number">Contact Number</label>
-              <input id="contact_number" type="text" class="form-input" placeholder="06/07/08 followed by 8 digits" />
+              <input id="contact_number" type="text" class="form-input" placeholder="0123456789" />
             </div>
           </div>
 
@@ -1033,4 +1033,5 @@
 </body>
 
 </html>
+
 
